--- a/Umm_Yacha/Umm_Yacha.vcxproj
+++ b/Umm_Yacha/Umm_Yacha.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Player99.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
